--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=s
  <body>
  <header>
  <div class="logo">
- <img src="/Material de Apoio-20240301/logo if.png" alt="" />
+ <img src= "logo if.png" alt="" />
  </div>
  </div>
  </header>
