--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=s
  <body>
  <header>
  <div class="logo">
- <img src= "logo if.png" alt="" />
+ <img src= "/logo if.png" alt="" />
  </div>
  </div>
  </header>
@@ -51,11 +51,11 @@ href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=s
  <div class = "container">
  <h1 class="title">Nosso time</h1>
  <div class="members">
- <a href="https://buscatextual.cnpq.br/buscatextual/visualizacv.do;jsessionid=DA21B85B16025104B315ABD6D9D2F026.buscatextual_0" class="member"><img src="/Material de Apoio-20240301/Cleber.jpg" /> </a>
-<a href="https://buscatextual.cnpq.br/buscatextual/visualizacv.do" class="member"><img src="/Material de Apoio-20240301/Daniel.jpg" /></a>
- <a href="https://buscatextual.cnpq.br/buscatextual/visualizacv.do" class="member"><img src="/Material de Apoio-20240301/Denilson.jpg" /></a>
- <a href="https://www.escavador.com/sobre/2396499/carlos-gracioli-neto#google_vignette" class="member"><img src="/Material de Apoio-20240301/Neto.jpg" /></a>
- <a href="https://www.escavador.com/sobre/4597548/rafael-rodrigues-garcia" class="member"><img src="/Material de Apoio-20240301/Rafael.jpg" /></a>
+ <a href="https://buscatextual.cnpq.br/buscatextual/visualizacv.do;jsessionid=DA21B85B16025104B315ABD6D9D2F026.buscatextual_0" class="member"><img src="/Cleber.jpg" /> </a>
+<a href="https://buscatextual.cnpq.br/buscatextual/visualizacv.do" class="member"><img src="/Daniel.jpg" /></a>
+ <a href="https://buscatextual.cnpq.br/buscatextual/visualizacv.do" class="member"><img src="/Denilson.jpg" /></a>
+ <a href="https://www.escavador.com/sobre/2396499/carlos-gracioli-neto#google_vignette" class="member"><img src="/Neto.jpg" /></a>
+ <a href="https://www.escavador.com/sobre/4597548/rafael-rodrigues-garcia" class="member"><img src="/Rafael.jpg" /></a>
 
  </div>
  </div>
